--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -147,7 +147,8 @@ Vagrant.configure("2") do |config|
       sudo dnf install -y epel-release
       sudo dnf install -y python36 python3-pip sshpass openssl-devel
       python3.6 -m venv ~/provisioning_venv --system-site-packages
-      ~/provisioning_venv/bin/pip install -r /vagrant/provisioning/requirements.txt
+      ~/provisioning_venv/bin/pip install pip==20.2.4 pip-tools==5.3.1
+      ~/provisioning_venv/bin/pip-sync /vagrant/provisioning/requirements.txt
     SCRIPT
 
     machine.vm.provision "shell", inline: $provisioner_vm_setup_script, privileged: false, name: "ansible setup"
