--- a/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/tasks/setup-RedHat.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/postgresql/tasks/setup-RedHat.yml
@@ -1,5 +1,11 @@
 ---
 {% raw %}
+
+- name: Add postgresql GPG key
+  rpm_key:
+    state: present
+    key: https://download.postgresql.org/pub/repos/yum/RPM-GPG-KEY-PGDG
+
 - name: install postgresql repo rpm
   dnf:
     name: "https://download.postgresql.org/pub/repos/yum/reporpms/EL-{{ ansible_distribution_major_version }}-x86_64/pgdg-redhat-repo-latest.noarch.rpm"
