Address deprecation warning for firewalld role. Use updated format for ansible requirements.yml.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/firewalld/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/firewalld/tasks/main.yml
@@ -17,7 +17,7 @@
     loop_var: firewalld_zone
 
 - name: apply firewalld rules
-  firewalld:
+  ansible.posix.firewalld:
     service: "{{ item.service | default(omit) }}"
     port: "{{ item.port | default(omit) }}"
     immediate: true
