--- a/{{ cookiecutter.project_slug }}/provisioning/requirements.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/requirements.yml
@@ -1,19 +1,20 @@
 ---
 
-- src: geerlingguy.postgresql
-  version: "2.2.1"
+roles:
+  - name: geerlingguy.postgresql
+    version: "2.2.1"
 
-- src: geerlingguy.nginx
-  version: "2.8.0"
+  - name: geerlingguy.nginx
+    version: "2.8.0"
 
-- src: geerlingguy.nodejs
-  version: "5.1.1"
+  - name: geerlingguy.nodejs
+    version: "5.1.1"
 
-- src: tmiller02.yarn
-  version: "0.1.0"
+  - name: tmiller02.yarn
+    version: "0.1.0"
 
-- src: tmiller02.neofetch
-  version: "0.1.0"
+  - name: tmiller02.neofetch
+    version: "0.1.0"
 
-- src: tmiller02.geckodriver
-  version: "0.1.0"
+  - name: tmiller02.geckodriver
+    version: "0.1.0"
