--- a/{{ cookiecutter.project_slug }}/provisioning/roles/firewalld/tasks/add_zone.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/firewalld/tasks/add_zone.yml
@@ -1,7 +1,7 @@
 ---
 {% raw %}
 - name: define the '{{ firewalld_zone.name }}' firewalld zone
-  firewalld:
+  ansible.posix.firewalld:
     zone: "{{ firewalld_zone.name }}"
     state: present
     permanent: true
@@ -12,7 +12,7 @@
   when: firewalld_zone_state.changed
 
 - name: add ip entries into the '{{ firewalld_zone.name }}' firewalld zone
-  firewalld:
+  ansible.posix.firewalld:
     zone: "{{ firewalld_zone.name }}"
     source: "{{ item }}"
     immediate: true
