--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -6,10 +6,10 @@
   tasks:
     - name: set ansible facts
       set_fact:
-        ansible_python_interpreter: "/usr/bin/python3"
+        ansible_python_interpreter: "/usr/bin/python3.8"
         any_errors_fatal: true
-    - name: install python 3.6 and pip
-      raw: dnf install -y python36 python3-pip
+    - name: install python 3.8 and ansible python dependencies
+      raw: apt-get update && apt-get install -y python3 python3-apt
       changed_when: true
     - name: check connectivity to all hosts
       ping:
@@ -54,7 +54,7 @@
 - hosts: database
   become: true
   roles:
-    - postgresql
+    - geerlingguy.postgresql
   vars_files:
     - vars/shared.yml
     - vars/postgresql.yml
