--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -2,8 +2,11 @@
 {% raw %}
 - name: install additional required python packages
   become: true
-  dnf:
-    name: python36-devel
+  apt:
+    name:
+      - python3-dev
+      - python3-venv
+      - python3-pip
     state: present
 
 - name: set up virtualenv in new release path
@@ -11,7 +14,7 @@
   become_user: "{{ backend_app_user }}"
   pip:
     virtualenv: "{{ backend_app_virtualenv_dir }}"
-    virtualenv_command: /usr/bin/python3.6 -m venv
+    virtualenv_command: /usr/bin/python3.8 -m venv
     name:
       - pip==20.0.2
       - pip-tools==5.0.0
