--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
@@ -1,21 +1,11 @@
 ---
 
-- import_tasks: selinux.yml
-
-- import_tasks: dnf_automatic.yml
-
-- name: install epel-release
-  dnf:
-    name: epel-release
-    state: present
-  notify: "update dnf cache"
-
-- meta: flush_handlers
+- import_tasks: unattended_upgrades.yml
 
 - import_tasks: login_info.yml
 
 - name: install useful packages
-  dnf:
+  apt:
     name:
       - atop
       - htop
@@ -23,5 +13,5 @@
       - nano
       - net-tools
       - nmap
-      - vim-enhanced
+      - vim
     state: present
