--- a/{{ cookiecutter.project_slug }}/provisioning/roles/deploy_check/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/deploy_check/tasks/main.yml
@@ -10,6 +10,9 @@
 - include_tasks: setup-RedHat.yml
   when: ansible_os_family == 'RedHat'
 
+- include_tasks: setup-Debian.yml
+  when: ansible_os_family == 'Debian'
+
 - name: sanity check some variables
   assert:
     that:
