--- a/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/vars/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/ssl/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 {% raw %}
-ssl_private_key_dest: "/etc/pki/tls/private/{{ ssl_private_key_name }}"
-ssl_certificate_dest: "/etc/pki/tls/certs/{{ ssl_certificate_name }}"
-ssl_csr_path: "/etc/pki/tls/csr/{{ (ssl_certificate_name | splitext)[0] }}.csr"
+ssl_private_key_dest: "/etc/ssl/private/{{ ssl_private_key_name }}"
+ssl_certificate_dest: "/etc/ssl/certs/{{ ssl_certificate_name }}"
+ssl_csr_path: "/etc/ssl/csr/{{ (ssl_certificate_name | splitext)[0] }}.csr"
 {% endraw %}
