--- a/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
@@ -19,8 +19,8 @@ nginx_vhosts:
     return: "404"
     filename: "01_frontend_ssl_catchall.conf"
     extra_parameters: |
-      ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
-      ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
+      ssl_certificate /etc/ssl/certs/{{ ssl_certificate_name }};
+      ssl_certificate_key /etc/ssl/private/{{ ssl_private_key_name }};
 
   - listen: "443 ssl http2"
     server_name: "{{ frontend_server_name }}"
@@ -42,6 +42,6 @@ nginx_vhosts:
           try_files $uri /index.html;
       }
 
-      ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
-      ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
+      ssl_certificate /etc/ssl/certs/{{ ssl_certificate_name }};
+      ssl_certificate_key /etc/ssl/private/{{ ssl_private_key_name }};
 {% endraw %}
