Initial changes to add docker as a provider for the dev environment.
- Add Dockerfile for building base image to be used with Vagrant.
- Add separate ssh key to use with ansible (rather than accessing the generated ssh key added under .vagrant)
- Add initial Vagrantfile configuration for provisioning with docker.

--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -37,7 +37,7 @@
         firewalld_rules: "{{ firewalld_base_rules + firewalld_additional_rules }}"
   roles:
     - base
-    - firewalld
+#    - firewalld
   tasks:
     - name: "Set release version facts"
       set_fact:
