--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -23,32 +23,54 @@ Vagrant.configure("2") do |config|
     "vagrant-hostmanager" => {"version" => ">=1.8.9"}
   }
 
-  config.vm.box = "ubuntu/focal64"
-  # disable the default vagrant mount. We configure custom mounts on the VM separately.
-  config.vm.synced_folder ".", "/vagrant", disabled: true
-
-  # There seems to be a VirtualBox bug where the VirtualBox processes on the host machine
-  # can get stuck at 100% after resuming from sleep on macOS hosts, even when the guest
-  # machines are idle. We disable audio devices on all VMs as a workaround.
-  # See https://www.virtualbox.org/ticket/18089
-  config.vm.provider "virtualbox" do |virtualbox|
+  # If we're using VirtualBox as the provider, apply the following config for all VMs
+  config.vm.provider :virtualbox do |virtualbox, override|
+    override.config.vm.box = "ubuntu/focal64"
+    override.vbguest.auto_update = true
+    # There seems to be a VirtualBox bug where the VirtualBox processes on the host machine
+    # can get stuck at 100% after resuming from sleep on macOS hosts, even when the guest
+    # machines are idle. We disable audio devices on all VMs as a workaround.
+    # See https://www.virtualbox.org/ticket/18089
     virtualbox.customize ["modifyvm", :id, "--audio", "none"]
+  end
+
+  # If we're using Docker as the provider, apply the following config for all containers
+  config.vm.provider :docker do |docker, override|
+    docker.image = "{{ cookiecutter.project_slug}}_base_image"
+    docker.remains_running = true
+    docker.has_ssh = true
+    docker.create_args = [
+      '--mount', 'type=tmpfs,destination=/run',
+      '--mount', 'type=tmpfs,destination=/run/lock'
+    ]
+    docker.volumes = [
+      '/sys/fs/cgroup:/sys/fs/cgroup:ro'
+    ]
+  end
+
+  config.vm.provision "shell" do |shell|
+    vagrant_ansible_key_pub = File.readlines("vagrant_ansible_key/id_rsa.pub").first.strip
+    shell.name = "add custom ansible key to authorized keys"
+    shell.privileged = false
+    shell.inline = <<-SCRIPT
+      if ! echo /home/vagrant/.ssh/authorized_keys | grep -q "vagrant ansible key"; then
+        echo #{vagrant_ansible_key_pub} >> /home/vagrant/.ssh/authorized_keys
+      fi
+    SCRIPT
   end
 
   config.apt_proxy.http = "{{ cookiecutter.vagrant_apt_proxy }}"
   config.proxy.http = "{{ cookiecutter.vagrant_http_proxy }}"
   config.proxy.https = "{{ cookiecutter.vagrant_https_proxy }}"
 
-  config.vbguest.auto_update = true
-
-  config.hostmanager.enabled = true
-  config.hostmanager.manage_host = true
-  config.hostmanager.manage_guest = true
+  config.hostmanager.enabled = false
+  config.hostmanager.manage_host = false
+  config.hostmanager.manage_guest = false
 
   config.vm.define "dev", primary: true do |machine|
     machine.vm.hostname = "{{ cookiecutter.frontend_app_dev_hostname }}"
     machine.hostmanager.aliases = ["{{ cookiecutter.backend_app_dev_hostname }}"]
-    machine.vm.network "private_network", ip: "172.17.177.21"
+    machine.vm.network "private_network", ip: "172.18.177.21"
     # Enables X11 forwarding. This can be useful when running Selenium tests
     # since you can see exactly what's happening in the browser during the tests.
     # This requires an X11 server on your host machine, see https://www.xquartz.org
@@ -57,21 +79,21 @@ Vagrant.configure("2") do |config|
     machine.vm.synced_folder(
       "./backend_app",
       "/opt/{{ cookiecutter.project_slug }}_backend/current",
-      type: "virtualbox"
     )
 
-    machine.vm.provider "virtualbox" do |virtualbox|
+    machine.vm.provider :virtualbox do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_dev"
       virtualbox.memory = 1024
       virtualbox.cpus = 1
     end
+
   end
 
   config.vm.define "db" do |machine|
-    machine.vbguest.no_install = true
     machine.vm.hostname = "{{ cookiecutter.database_dev_hostname }}"
-    machine.vm.network "private_network", ip: "172.17.177.22"
-    machine.vm.provider "virtualbox" do |virtualbox|
+    machine.vm.network "private_network", ip: "172.18.177.22"
+
+    machine.vm.provider :virtualbox do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_db"
       virtualbox.memory = 512
     end
@@ -95,35 +117,35 @@ Vagrant.configure("2") do |config|
     # set the hostname later on ourselves in an inline shell script.
     # See https://github.com/hashicorp/vagrant/issues/7263 for more.
     machine.hostmanager.aliases = ["{{ cookiecutter.provisioner_hostname }}"]
-    machine.vm.network "private_network", ip: "172.17.177.20"
-    machine.vm.synced_folder "./", "/vagrant", type: "virtualbox"
+    machine.vm.network "private_network", ip: "172.18.177.20"
     # Mount the folder containing the dev vm ssh keys with explicit file
     # permissions. This addresses 'unprotected private key file' errors on
     # Windows, due to mounts on Windows having 777 file permissions by default.
     machine.vm.synced_folder(
-      "./.vagrant/machines",
-      "/vagrant_machines",
-      type: "virtualbox",
+      "./vagrant_ansible_key",
+      "/vagrant_ansible_key",
       mount_options: ["fmode=600"]
     )
 
-    machine.vm.provider "virtualbox" do |virtualbox|
+    machine.vm.provider :virtualbox do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_provisioner"
       virtualbox.memory = 1024
     end
 
-    $provisioner_vm_setup_script = <<-SCRIPT
-      sudo hostnamectl set-hostname {{ cookiecutter.provisioner_hostname }}
-      # install ansible requirements
-      sudo apt-get update
-      sudo apt-get install -y python3 python3-venv python3-pip python3-apt sshpass libssl-dev
-      python3.8 -m venv ~/provision_venv --system-site-packages
-      source ~/provision_venv/bin/activate
-      pip install pip==20.3.3 wheel==0.36.2
-      pip install -r /vagrant/provisioning/requirements.txt
-    SCRIPT
-
-    machine.vm.provision "shell", inline: $provisioner_vm_setup_script, privileged: false, name: "ansible setup"
+    machine.vm.provision "shell" do |shell|
+      shell.name = "ansible setup"
+      shell.privileged = false
+      shell.inline = <<-SCRIPT
+        sudo hostnamectl set-hostname {{ cookiecutter.provisioner_hostname }}
+        # install ansible requirements
+        sudo apt-get update
+        sudo apt-get install -y python3 python3-venv python3-pip python3-apt sshpass libssl-dev
+        python3.8 -m venv ~/provision_venv --system-site-packages
+        source ~/provision_venv/bin/activate
+        pip install pip==20.3.3 wheel==0.36.2
+        pip install -r /vagrant/provisioning/requirements.txt
+      SCRIPT
+    end
 
     # See https://www.vagrantup.com/docs/provisioning/ansible_local.html and
     # https://www.vagrantup.com/docs/provisioning/ansible_common.html
