--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/virtualenv.yml
@@ -1,9 +1,10 @@
 ---
 {% raw %}
-- name: install python packages
+- name: install python packages and build dependencies
   become: true
   apt:
     name:
+      - libpq-dev
       - python3-dev
       - python3-venv
       - python3-pip
@@ -19,6 +20,7 @@
       - pip==20.2.4
       - pip-tools==5.3.1
       - setuptools==50.3.2
+      - wheel==0.36.2
 
 - name: install requirements using pip-sync
   become: true
