Install geckodriver from apt package.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/install_selenium_dependencies.yml
@@ -4,9 +4,7 @@
   apt:
     name:
       - firefox
+      - firefox-geckodriver
       - xauth
       - x11-apps
     state: present
-
-- import_role:
-    name: tmiller02.geckodriver
