--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -139,7 +139,7 @@ Vagrant.configure("2") do |config|
         sudo hostnamectl set-hostname {{ cookiecutter.provisioner_hostname }}
         # install ansible requirements
         sudo apt-get update
-        sudo apt-get install -y python3 python3-venv python3-pip python3-apt sshpass libssl-dev
+        sudo apt-get install -y curl python3 python3-venv python3-pip python3-apt libssl-dev
         python3.8 -m venv ~/provision_venv --system-site-packages
         source ~/provision_venv/bin/activate
         pip install pip==20.3.3 wheel==0.36.2
