--- a/{{ cookiecutter.project_slug }}/frontend_app/.env.development
+++ b/{{ cookiecutter.project_slug }}/frontend_app/.env.development
@@ -2,4 +2,4 @@
 # the backend app in the 'dev' environment being served by Nginx. You can
 # override this by setting the REACT_APP_BACKEND_URL environment variable.
 
-REACT_APP_BACKEND_URL=https://{{ cookiecutter.backend_app_dev_hostname }}
+REACT_APP_BACKEND_URL=https://localhost:4000
