--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
@@ -1,3 +1,4 @@
+{% raw %}
 #---
 #
 #deploy_check_display_confirmation_prompts: true
@@ -8,6 +9,7 @@
 #backend_server_name: "<your-production-server-backend-cname>"
 #
 #frontend_server_name: "<your-production-server-frontend-cname>"
+#frontend_app_backend_url: "https://{{ backend_server_name }}"
 #
 ## See README.txt - store sensitive variables like this using ansible vault
 #database_password: "<your-production-database-password>"
@@ -21,3 +23,4 @@
 #
 #ssl_provider: 'certbot'
 #ssl_certbot_email: '<your-certbot-notification-email>'
+{% endraw %}
