--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
@@ -14,12 +14,10 @@
 ## See README.txt - store sensitive variables like this using ansible vault
 #database_password: "<your-production-database-password>"
 #
-# firewalld_zones:
-#  - name: backend
-#    ip_addresses:
-#     - <your-production-backend-ip-address>
+#ufw_firewall_database_allow_from_ip:
+# - <your-production-backend-ip-address>
 #
-# firewalld_additional_rules: []
+#ufw_firewall_additional_rules: []
 #
 #ssl_provider: 'certbot'
 #ssl_certbot_email: '<your-certbot-notification-email>'
