--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -40,7 +40,8 @@ Vagrant.configure("2") do |config|
     docker.has_ssh = true
     docker.create_args = [
       '--mount', 'type=tmpfs,destination=/run',
-      '--mount', 'type=tmpfs,destination=/run/lock'
+      '--mount', 'type=tmpfs,destination=/run/lock',
+      '--cap-add=NET_ADMIN'
     ]
     docker.volumes = [
       '/sys/fs/cgroup:/sys/fs/cgroup:ro'
