--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -22,6 +22,11 @@ Vagrant.configure("2") do |config|
     "vagrant-vbguest" => {"version" => ">=0.24.0"},
   }
 
+  # Prefer using the VirtualBox provider over Docker if both are available
+  # https://www.vagrantup.com/docs/providers/basic_usage#default-provider
+  config.vm.provider "virtualbox"
+  config.vm.provider "docker"
+
   # If we're using VirtualBox as the provider, apply the following config for all VMs
   config.vm.provider :virtualbox do |virtualbox, override|
     override.config.vm.box = "ubuntu/focal64"
@@ -48,9 +53,12 @@ Vagrant.configure("2") do |config|
     ]
   end
 
+  # Allow connections from the 'vagrant_ansible_key' on all Vagrant VMs. We'll
+  # be using this key to make ssh connections when running Ansible to provision
+  # the Vagrant dev environment (see the 'ansible_local' configuration).
   config.vm.provision "shell" do |shell|
     vagrant_ansible_key_pub = File.readlines("vagrant_ansible_key/id_rsa.pub").first.strip
-    shell.name = "add custom ansible key to authorized keys"
+    shell.name = "add custom vagrant ansible key to authorized keys"
     shell.privileged = false
     shell.inline = <<-SCRIPT
       if ! echo /home/vagrant/.ssh/authorized_keys | grep -q "vagrant ansible key"; then
@@ -157,6 +165,7 @@ Vagrant.configure("2") do |config|
       ansible.playbook_command = "~/provision_venv/bin/ansible-playbook"
       ansible.provisioning_path = "/vagrant/provisioning"
       ansible.config_file = "ansible-vagrant.cfg"
+      ansible.raw_arguments = ["--private-key=/vagrant_ansible_key/id_rsa"]
       ansible.install = false # we do this in the above inline setup script
       ansible.galaxy_role_file = "requirements.yml"
       ansible.galaxy_command = " ~/provision_venv/bin/ansible-galaxy install --role-file=%{role_file}"
@@ -165,8 +174,6 @@ Vagrant.configure("2") do |config|
       ansible.inventory_path = "environments/dev/inventory"
       ansible.tags = ENV["VAGRANT_ANSIBLE_TAGS"] || "all"
     end
-    # Shut down the provisioner VM once it has finished provisioning the other VMs.
-    # machine.vm.provision "shell", inline: "shutdown -h now"
   end
 
 end
