--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -29,8 +29,8 @@ Vagrant.configure("2") do |config|
 
   # If we're using VirtualBox as the provider, apply the following config for all VMs
   config.vm.provider :virtualbox do |virtualbox, override|
-    override.config.vm.box = "ubuntu/focal64"
-    override.vbguest.auto_update = true
+    override.vm.box = "ubuntu/focal64"
+    override.vbguest.auto_update = false
     # There seems to be a VirtualBox bug where the VirtualBox processes on the host machine
     # can get stuck at 100% after resuming from sleep on macOS hosts, even when the guest
     # machines are idle. We disable audio devices on all VMs as a workaround.
@@ -88,7 +88,6 @@ Vagrant.configure("2") do |config|
     )
 
     machine.vm.provider :virtualbox do |virtualbox|
-      virtualbox.name = "{{ cookiecutter.project_slug }}_dev"
       virtualbox.memory = 1024
       virtualbox.cpus = 1
     end
@@ -101,7 +100,6 @@ Vagrant.configure("2") do |config|
     machine.vm.network "forwarded_port", guest: 443, host: 5000
 
     machine.vm.provider :virtualbox do |virtualbox|
-      virtualbox.name = "{{ cookiecutter.project_slug }}_db"
       virtualbox.memory = 512
     end
   end
@@ -110,7 +108,6 @@ Vagrant.configure("2") do |config|
     machine.vm.network "private_network", ip: "172.18.177.22"
 
     machine.vm.provider :virtualbox do |virtualbox|
-      virtualbox.name = "{{ cookiecutter.project_slug }}_db"
       virtualbox.memory = 512
     end
   end
@@ -139,7 +136,6 @@ Vagrant.configure("2") do |config|
     )
 
     machine.vm.provider :virtualbox do |virtualbox|
-      virtualbox.name = "{{ cookiecutter.project_slug }}_provisioner"
       virtualbox.memory = 1024
     end
 
