--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -126,24 +126,19 @@ Vagrant.configure("2") do |config|
     provisioner.vm.network "private_network", ip: "172.18.177.23"
     # Forward a port that can be used if starting the frontend dev server
     provisioner.vm.network "forwarded_port", guest: 5001, host: 5001
-    # Mount the folder containing the dev vm ssh keys with explicit file
-    # permissions. This addresses 'unprotected private key file' errors on
-    # Windows, due to mounts on Windows having 777 file permissions by default.
-    provisioner.vm.synced_folder(
-      "./vagrant_ansible_key",
-      "/vagrant_ansible_key",
-      mount_options: ["fmode=600"]
-    )
 
     provisioner.vm.provider :virtualbox do |virtualbox|
       virtualbox.memory = 1024
     end
 
+    provisioner.vm.provision "file", source: "./vagrant_ansible_key/id_rsa", destination: "/home/vagrant/.ssh/vagrant_ansible_key"
+
     provisioner.vm.provision "shell" do |shell|
       shell.name = "ansible setup"
       shell.privileged = false
-      # install ansible requirements
+      # set ssh key permissions and install ansible requirements
       shell.inline = <<-SCRIPT
+        chmod 400 ~/.ssh/vagrant_ansible_key
         sudo apt-get update
         sudo apt-get install -y curl rsync python3 python3-venv python3-pip python3-apt libssl-dev
         python3.8 -m venv ~/provision_venv --system-site-packages
@@ -161,7 +156,7 @@ Vagrant.configure("2") do |config|
       ansible.playbook_command = "~/provision_venv/bin/ansible-playbook"
       ansible.provisioning_path = "/vagrant/provisioning"
       ansible.config_file = "ansible-vagrant.cfg"
-      ansible.raw_arguments = ["--private-key=/vagrant_ansible_key/id_rsa"]
+      ansible.raw_arguments = ["--private-key=~/.ssh/vagrant_ansible_key"]
       ansible.install = false # we do this in the above inline setup script
       ansible.galaxy_role_file = "requirements.yml"
       ansible.galaxy_command = " ~/provision_venv/bin/ansible-galaxy install --role-file=%{role_file}"
