Install neofetch using apt.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/login_info.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/login_info.yml
@@ -1,7 +1,9 @@
 ---
 
-- import_role:
-    name: tmiller02.neofetch
+- name: install neofetch
+  apt:
+    name: neofetch
+    state: present
 
 - name: ensure neofetch config directory exists
   file:
