--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -61,7 +61,7 @@ Vagrant.configure("2") do |config|
     shell.name = "add custom vagrant ansible key to authorized keys"
     shell.privileged = false
     shell.inline = <<-SCRIPT
-      if ! echo /home/vagrant/.ssh/authorized_keys | grep -q "vagrant ansible key"; then
+      if ! grep -q "vagrant ansible key" /home/vagrant/.ssh/authorized_keys ; then
         echo #{vagrant_ansible_key_pub} >> /home/vagrant/.ssh/authorized_keys
       fi
     SCRIPT
