Remove SELinux workaround and mentions of SELinux in documentation (Ubuntu does not come with SELinux by default).

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/main.yml
@@ -19,7 +19,13 @@
 
 - import_tasks: virtualenv.yml
 
-- import_tasks: settings.yml
+- name: template settings into the new release path
+  template:
+    src: settings.env.j2
+    dest: "{{ backend_app_deploy_helper.new_release_path }}/settings.env"
+    owner: "{{ backend_app_user }}"
+    group: "{{ backend_app_group }}"
+    mode: "u=rw,g=,o="
 
 - import_tasks: collect_static.yml
 
