Set 'run_once' when displaying database migrations.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/migrate_db.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/migrate_db.yml
@@ -12,6 +12,7 @@
     django_manage_migrate
 
 - name: display migrate output
+  run_once: true
   debug:
     msg: "{{ django_manage_migrate.out }}"
 {% endraw %}
