--- a/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 host_key_checking = yes
 roles_path = galaxy_roles:roles
-callback_whitelist = timer, profile_roles
+callback_enabled = timer, profile_roles
 stdout_callback = yaml
 force_color = yes
 any_errors_fatal = yes
