--- a/{{ cookiecutter.project_slug }}/provisioning/ansible_vagrant.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible_vagrant.cfg
@@ -1,7 +1,7 @@
 [defaults]
 host_key_checking = no
 roles_path = galaxy_roles:roles
-callback_enabled = timer, profile_roles
+callbacks_enabled = timer, profile_roles
 stdout_callback = yaml
 force_color = yes
 any_errors_fatal = yes
