--- a/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
@@ -15,8 +15,8 @@
 # Note that this doesn't fail the playbook if vulnerable packages are found.
 # This only displays the report in the ansible output so we don't cause any
 # deployment to fail unexpectedly.
-- name: run yarn audit
-  command: yarn audit --no-color
+- name: run yarn npm audit
+  command: yarn npm audit
   args:
     chdir: "{{ playbook_dir }}/../frontend_app/"
   ignore_errors: true
