Update to geerlingguy.postgresql 3.4.0 (with support for Ubuntu 22.04)

--- a/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/postgresql.yml
@@ -3,6 +3,8 @@
 postgresql_global_config_options:
   - option: listen_addresses
     value: '*'
+  - option: log_directory
+    value: 'log'
 
 postgresql_databases:
   - name: "{{ database_name }}"
